2010-01-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11127]
	* posix/regcomp.c (alc_eclosure_iter): Do not ignore
	re_node_set_insert failure; return REG_ESPACE.
	Patch by Paul Eggert.

	* bits/confname.h: Make pre-C99-safe.

2010-01-14  Ryan S. Arnold  <rsa@us.ibm.com>

	* Makeconfig (+prector, +postctor, +prectorS, +postctorS): Add
	$(sysdep-LDFLAGS) to pre and post ctors so that the proper .o
	files are found by GCC.

2010-01-14  Ulrich Drepper  <drepper@redhat.com>

	* posix/unistd.h: Relax conditions for ualarm, usleep, getwd, vfork,
	brk, and sbrk.

	* string/strings.h: Relax condition for bcmp, bcopy, bzero, ffs,
	index, and rindex.

	* stdlib/stdlib.h: Relax conditions for *cvt functions and valloc.

	* Versions.def: Add GLIBC_2.12 for libpthread.

	[BZ #11126]
	* malloc/malloc.c (malloc_info): Initialize malloc if not already
	done.  Handle empty bin lists.

	* posix/unistd.h: Change getpagesize and getdtablesize declaration
	visibility some more.

	* resolv/netdb.h: Relax condition to elide obsolete resolver constants.

	* posix/unistd.h: Declare getpagesize in _GNU_SOURCE mode.

	[BZ #11120]
	* sysdeps/x86_64/strcmp.S: Prevent silent errors should strncmp be
	needed outside libc.

2010-01-13  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/stdlib.h: Parameter of unsetenv must not be NULL.

2010-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/strlen.S: Unroll the loop.

2010-01-13  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/stdlib.h: Be a bit more relaxed about obsoleted mktemp symbol.

2010-01-12  Ulrich Drepper  <drepper@redhat.com>

	* conform/data/complex.h-data: Test for POSIX2008.

	* conform/data/ctype.h-data: Fix POSIX testing.

	* conform/data/dirent.h-data: ino_t only needed for XSI.

	* grp/grp.h: Declare getgrent and endgrent for XPG7.

	* conform/data/inttypes.h-data: Use same types as the headers.

	* resolv/netdb.h: Don't define old resolver macros for XPG7.
